--- a/MPOS/app.config
+++ b/MPOS/app.config
@@ -6,5 +6,7 @@
     <add key="dbfile" value="/posdb.db"/>
     <add key="shopcode" value="8810"/>
     <add key="poscode" value="11"/>
+    <add key="MQAddr" value="failover:(tcp://localhost:61616)"/>
+    <add key="MQSaleOrderSyncQueues" value="sale_order_sync_queues_0.1"/>
   </appSettings>
 </configuration>
