--- a/MPOS/app.config
+++ b/MPOS/app.config
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<startup>
-  <supportedRuntime version="v2.0.50727"/></startup>
-  <appSettings>
-    <add key="dbfile" value="/posdb.db"/>
-    <add key="shopcode" value="8810"/>
-    <add key="poscode" value="11"/>
-    <add key="MQAddr" value="failover:(tcp://localhost:61616)"/>
-    <add key="MQSaleOrderSyncQueues" value="sale_order_sync_queues_0.1"/>
-  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
+  
+  
+  
+
+
 </configuration>
