--- a/MPOS/MPOS.csproj
+++ b/MPOS/MPOS.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MPOS</RootNamespace>
     <AssemblyName>MPOS</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -97,6 +97,12 @@
     <Compile Include="presenter\PayListFormPresenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="utils\ViewUtil.cs" />
+    <Compile Include="view\AppForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\AppForm.Designer.cs">
+      <DependentUpon>AppForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\BaseDialogForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -147,6 +153,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="SystemInfo.cs" />
+    <Compile Include="view\ServiceConfigForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\ServiceConfigForm.Designer.cs">
+      <DependentUpon>ServiceConfigForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -157,6 +169,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="view\AppForm.resx">
+      <DependentUpon>AppForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="view\BaseDialogForm.resx">
       <DependentUpon>BaseDialogForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -181,9 +196,10 @@
     <EmbeddedResource Include="view\ProductChosseForm.resx">
       <DependentUpon>ProductChosseForm.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="App.config">
-      <SubType>Designer</SubType>
-    </None>
+    <EmbeddedResource Include="view\ServiceConfigForm.resx">
+      <DependentUpon>ServiceConfigForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -195,6 +211,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="resources\bg.jpg" />
     <Content Include="resources\loginbg.jpg" />
     <Content Include="resources\logo.ico" />
     <Content Include="resources\net.png" />
@@ -202,6 +219,10 @@
     <Content Include="resources\netstate_error.png" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MPOS.CONFIG\MPOS.CONFIG.csproj">
+      <Project>{a033bd81-48d5-4696-aef6-8f75fec0ab3a}</Project>
+      <Name>MPOS.CONFIG</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MPOS.SERVICE\MPOS.SERVICE.csproj">
       <Project>{12fd5af0-d6cb-4141-915c-44ca8f649cbc}</Project>
       <Name>MPOS.SERVICE</Name>
