--- a/MPOS/MPOS.csproj
+++ b/MPOS/MPOS.csproj
@@ -67,6 +67,26 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Apache.NMS, Version=1.6.0.3061, Culture=neutral, PublicKeyToken=82756feee3957618, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\MPOS.SERVICE\Apache.NMS.dll</HintPath>
+    </Reference>
+    <Reference Include="Apache.NMS.ActiveMQ, Version=1.6.0.3072, Culture=neutral, PublicKeyToken=82756feee3957618, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\MPOS.SERVICE\Apache.NMS.ActiveMQ.dll</HintPath>
+    </Reference>
+    <Reference Include="JumpKick.HttpLib, Version=2.0.14.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\MPOS.SERVICE\JumpKick.HttpLib.dll</HintPath>
+    </Reference>
+    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\MPOS.SERVICE\log4net.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\MPOS.SERVICE\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -91,11 +111,22 @@
     <Compile Include="command\PayCommand.cs" />
     <Compile Include="command\PayListCommand.cs" />
     <Compile Include="command\RemoveOrderDetailCommand.cs" />
+    <Compile Include="component\BaseGrid.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="component\BaseGrid.Designer.cs">
+      <DependentUpon>BaseGrid.cs</DependentUpon>
+    </Compile>
     <Compile Include="presenter\LoginPresenter.cs" />
     <Compile Include="presenter\MainFormPresenter.cs" />
     <Compile Include="presenter\PayFormPresenter.cs" />
     <Compile Include="presenter\PayListFormPresenter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="utils\MessageListener.cs" />
+    <Compile Include="utils\MessageSender.cs" />
+    <Compile Include="utils\MQCustomer.cs" />
+    <Compile Include="utils\NetCheckUtil.cs" />
+    <Compile Include="utils\SyncBackUtil.cs" />
     <Compile Include="utils\ViewUtil.cs" />
     <Compile Include="view\AppForm.cs">
       <SubType>Form</SubType>
@@ -235,6 +266,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
