--- a/MPOS/app.config
+++ b/MPOS/app.config
@@ -17,11 +17,18 @@
       <level value="DEBUG"/>
     </logger>
     <appender name="LogFileAppender" type="log4net.Appender.FileAppender" >
-      <param name="File" value="mpos-logs.txt" />
+      <param name="File" value="logs/mpos-logs.txt" />
       <param name="AppendToFile" value="true" />
+      <datePattern value="(yyyy-MM-dd)"/>
+      <RollingStyle value="Size"/>
+      <!--每天记录的日志文件个数，与maximumFileSize配合使用-->
+      <MaxSizeRollBackups value="10"/>
+      <!--每个日志文件的最大大小-->
+      <!--可用的单位:KB|MB|GB-->
+      <!--不要使用小数,否则会一直写入当前日志-->
+      <maximumFileSize value="5MB"/>
       <layout type="log4net.Layout.PatternLayout">
-        <param name="Header" value="[Header] "/>
-        <param name="Footer" value="[Footer] "/>
+       
         <param name="ConversionPattern" value="%d [%t] %-5p %c [%x]  - %m%n" />
       </layout>
       <filter type="log4net.Filter.LevelRangeFilter">
